# observer-suspension

./: .gitignore  CITATION.cff  README.md  RESULTS.md  ROADMAP.md  RUNNER_STATUS.md  RUN_LOG.md  pyproject.toml
data/: o1_borderline_cases.jsonl  o1_comparison_pairs.jsonl  o1_disagreement_labels.jsonl  o1_hard_cases_v0.jsonl  o1_hard_comparison_pairs.jsonl  o1_hard_inputs_seed.jsonl  o1_hard_rejected_v0.jsonl  o1_miniset.jsonl  o1_multiannotator_agreement_labels.jsonl  o1_multiannotator_seed.jsonl
docs/: CAUSALITY_CASES_V0.md  DATASETS_INDEX.md  FIRST_CASES.md  O1_ANNOTATION_GUIDELINES.md  O1_APPLICATION_TEMPLATE.md  O1_BENCHMARK_EVALUATION_V0.md  O1_BENCHMARK_SET_V0.md  O1_COMPARISON_RULES.md  O1_DISAGREEMENT_TYPES.md  O1_EXTERNAL_BENCHMARK_v1.md  O1_GAIN_CRITERIA.md  O1_MINIMAL_AXIOMS.md  O1_MULTIANNOTATOR_AGREEMENT_RULES.md  O1_OPEN_PROBLEMS.md  O1_PATTERN_CANDIDATES.md  O1_PROTOCOL.md  O1_PROTOCOL_LOGIC.md  O1_TRANSFORMATION_RULES_V0.md  OBSERVER_SUSPENSION_PUBLIC_POSITION.md  PHASE1_STATUS.md  PROTOCOL_O1.md  PROTOCOL_SCOPE.md  REPOSITORY_STATUS.md  RESEARCH_DIRECTION.md  STRUCTURAL_GAIN_V0.md  TIME_CASES_V0.md
examples/: O1_comparison_examples.md  O1_examples.md  O1_hard_cases_v0.md  O1_on_real_llm_outputs_v0.md  O1_on_real_llm_outputs_v1_weak_prompts.md
tests/: test_repository_smoke.py
tools/: analyze_o1_multiannotator_agreement.py  inspect_o1_comparison_pairs.py  inspect_o1_dataset.py  inspect_o1_disagreement_labels.py  inspect_o1_hard_comparison_pairs.py  inspect_o1_hard_rejected_v0.py  inspect_o1_multiannotator_agreement_labels.py  run_o1_checks.py  (+9 more)
